# 3-python-package-everything

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  event-logger.yml  requirements.txt
src/facedbook/: __main__.py  encoder.py  faces.py  feelings.py  stories.py
src/packageName/: __main__.py  faces.py  feelings.py  stories.py
tests/: example.py  test_facedbook.py
